--- a/index.html
+++ b/index.html
@@ -25,9 +25,38 @@
       <p class="explore__subtitle">
         Découvrez des restaurants d'exception, séléctionnés par nos soins
       </p>
-      <a class="explore__button">
-        Explorer nos restaurants
-      </a>
+      <p class="explore__restaurants">
+        <a class="explore__button">
+          Explorer nos restaurants
+        </a>
+      </p>
+    </section>
+
+    <section class="operation">
+      <h2 class="operation__title">Fonctionnement</h2>
+      <div class="operation__card">
+        <p class="operation__number">1</p>
+        <div class="operation__explain">
+          <i class="fas fa-mobile-alt mobile__icone"></i>
+          <p class="operation__text">Choisissez un restaurant</p>
+        </div>
+      </div>
+      <div class="operation__card">
+        <p class="operation__number">2</p>
+        <div class="operation__explain">
+          <i class="fas fa-list-ul list__icone"></i>
+          <p class="operation__text">Composez votre menu</p>
+        </div>
+      </div>
+      <div class="operation__card">
+        <div class="operation__degustation">
+          <p class="operation__number">3</p>
+          <div class="operation__explain">
+            <i class="fas fa-store store__icone"></i>
+            <p class="operation__text">Dégustez au restaurant</p>
+          </div>
+        </div>
+      </div>
     </section>
 
   </main>
