--- a/index.html
+++ b/index.html
@@ -59,6 +59,71 @@
       </div>
     </section>
 
+    <section class="restaurants">
+      <div class="restaurant__cards">
+        <h1 class="restaurants__title">Restaurants</h1>
+        <div class="restaurants__card">
+          <img src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" class="restaurants__card__images">
+          <span class="restaurants__new">Nouveau</span>
+          <footer class="restaurants__infos">
+            <div class="restaurants__content">
+              <h2 class="restaurants__name">La palette du goût</h2>
+              <p class="restaurants__subtitle">Ménilmontant</p>
+            </div>
+            <div class="restaurants__button wishlist__btn">
+              <i class="far fa-heart restaurants__wishlist"></i>
+            </div>
+          </footer>
+        </div>
+
+        <div class="restaurants__card">
+          <img src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="restaurants__card__images">
+          <span class="restaurants__new">Nouveau</span>
+          <footer class="restaurants__infos">
+            <div class="restaurants__content">
+              <h2 class="restaurants__name">La note enchantée</h2>
+              <p class="restaurants__subtitle">Charonne</p>
+            </div>
+            <div class="restaurants__button wishlist__btn">
+
+              <i class="far fa-heart restaurants__wishlist"></i>
+            </div>
+          </footer>
+        </div>
+
+        <div class="restaurants__card">
+          <img src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="restaurants__card__images">
+          <!-- <span class="restaurants__new"></span> -->
+          <footer class="restaurants__infos">
+            <div class="restaurants__content">
+              <h2 class="restaurants__name">À la française</h2>
+              <p class="restaurants__subtitle">Cité Rouge</p>
+            </div>
+            <div class="restaurants__button wishlist__btn">
+              <i class="far fa-heart restaurants__wishlist"></i>
+            </div>
+          </footer>
+        </div>
+
+        <div class="restaurants__card">
+          <img src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" class="restaurants__card__images">
+          <!-- <span class="restaurants__new"></span> -->
+          <footer class="restaurants__infos">
+            <div class="restaurants__content">
+              <h2 class="restaurants__name">Le délice des sens</h2>
+              <p class="restaurants__subtitle">Folie-Méricourt</p>
+            </div>
+            <button class="restaurants__button">
+              <!-- <div class="restaurants__button wishlist__btn"> -->
+              <i class="far fa-heart restaurants__wishlist"></i>
+              <!-- <i class="far fa-heart restaurants__wishlist   wishlist__btn__like   wishlist__btn__like--noBg"></i>
+              <i class="far fa-heart restaurants__wishlist wishlist__btn__like   wishlist__btn__like--bg"></i> -->
+            </button>
+          </footer>
+        </div>
+      </div>
+    </section>
+
   </main>
 </body>
 </html>
