--- a/homepage.html
+++ b/homepage.html
@@ -70,24 +70,30 @@
               <h2 class="restaurants__name">La palette du goût</h2>
               <p class="restaurants__subtitle">Ménilmontant</p>
             </div>
-            <div class="restaurants__button wishlist__btn">
-              <i class="far fa-heart restaurants__wishlist"></i>
-            </div>
+            <label class="checkbox-heart">
+              <input type="checkbox">
+              <i class="fas fa-heart uncheck"></i>
+              <i class="fas fa-heart check"></i>
+            </label>
           </footer>
         </div>
 
         <div class="restaurants__card">
-          <img src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="restaurants__card__images">
-          <span class="restaurants__new">Nouveau</span>
-          <footer class="restaurants__infos">
-            <div class="restaurants__content">
-              <h2 class="restaurants__name">La note enchantée</h2>
-              <p class="restaurants__subtitle">Charonne</p>
-            </div>
-            <div class="restaurants__button wishlist__btn">
-              <i class="far fa-heart restaurants__wishlist"></i>
-            </div>
-          </footer>
+          <a class="restaurants__navigation" href="./la-note-enchantée.html">
+            <img src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="restaurants__card__images">
+            <span class="restaurants__new">Nouveau</span>
+            <footer class="restaurants__infos">
+              <div class="restaurants__content">
+                <h2 class="restaurants__name">La note enchantée</h2>
+                <p class="restaurants__subtitle">Charonne</p>
+              </div>
+              <label class="checkbox-heart">
+                <input type="checkbox">
+                <i class="fas fa-heart uncheck"></i>
+                <i class="fas fa-heart check"></i>
+              </label>
+            </footer>
+          </a>
         </div>
 
         <div class="restaurants__card">
@@ -99,9 +105,14 @@
                 <h2 class="restaurants__name">À la française</h2>
                 <p class="restaurants__subtitle">Cité Rouge</p>
               </div>
-              <div class="restaurants__button wishlist__btn">
+              <!-- <div class="restaurants__button wishlist__btn">
                 <i class="far fa-heart restaurants__wishlist"></i>
-              </div>
+              </div> -->
+              <label class="checkbox-heart">
+                <input type="checkbox">
+                <i class="fas fa-heart uncheck"></i>
+                <i class="fas fa-heart check"></i>
+              </label>
             </footer>
 
           </a>
@@ -115,12 +126,11 @@
               <h2 class="restaurants__name">Le délice des sens</h2>
               <p class="restaurants__subtitle">Folie-Méricourt</p>
             </div>
-            <button class="restaurants__button">
-              <!-- <div class="restaurants__button wishlist__btn"> -->
-              <i class="far fa-heart restaurants__wishlist"></i>
-              <!-- <i class="far fa-heart restaurants__wishlist   wishlist__btn__like   wishlist__btn__like--noBg"></i>
-              <i class="far fa-heart restaurants__wishlist wishlist__btn__like   wishlist__btn__like--bg"></i> -->
-            </button>
+            <label class="checkbox-heart">
+              <input type="checkbox">
+              <i class="fas fa-heart uncheck"></i>
+              <i class="fas fa-heart check"></i>
+            </label>
           </footer>
         </div>
       </div>
