--- a/la-note-enchantée.html
+++ b/la-note-enchantée.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Restaurant "A la française"</title>
+  <title>Restaurant "La Note Enchantée"</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/7d17636476.js" crossorigin="anonymous"></script>
 </head>
@@ -19,11 +19,11 @@
     </div>
   </header>
 
-  <img src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="restaurants-details-images">
+  <img src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="restaurants-details-images__enchantee">
 
-  <main class="details">
+  <main class="details__enchantee">
     <header class="details__header">
-      <h2 class="details__title">À la française</h2>
+      <h2 class="details__title">La Note Enchantée</h2>
       <label class="checkbox-heart">
         <input type="checkbox">
         <i class="fas fa-heart uncheck"></i>
@@ -36,24 +36,31 @@
         <h3 class="sublevelmenu__title">Entrées</h3>
         <section class="item">
           <header class="item__header">
-            <h4 class="item__title">Tartare de poulpe acidulé</h4>
-            <p class="item__description">Aux zests d'orange</p>
+            <h4 class="item__title">Ravioles de foie gras</h4>
+            <p class="item__description">Accompagnés de leur crème à la truffe</p>
           </header>
           <div class="item__price">25€</div>
         </section>
         <section class="item">
           <header class="item__header">
-            <h4 class="item__title">Velouté de légumes d'antan</h4>
-            <p class="item__description">Carotte, panais, topinambour</p>
+            <h4 class="item__title">Caviar osciètre </h4>
+            <p class="item__description">Sur blini à la farine de blé noir</p>
           </header>
           <div class="item__price">35€</div>
         </section>
         <section class="item">
           <header class="item__header">
-            <h4 class="item__title">Soupe à l'oignon</h4>
-            <p class="item__description">Revisitée</p>
+            <h4 class="item__title">Homard et espuma de potiron</h4>
+            <p class="item__description">Mariné aux zestes d'orange</p>
           </header>
           <div class="item__price">20€</div>
+        </section>
+        <section class="item">
+          <header class="item__header">
+            <h4 class="item__title">Foie gras de canard cuit entier</h4>
+            <p class="item__description">Confiture de figue et pain toasté</p>
+          </header>
+          <div class="item__price">35€</div>
         </section>
       </section>
 
@@ -61,22 +68,22 @@
         <h3 class="sublevelmenu__title">Plats</h3>
         <section class="item">
           <header class="item__header">
-            <h4 class="item__title">Coquilles Saint-Jacques</h4>
-            <p class="item__description">Accompagnées d'une purée de panais</p>
+            <h4 class="item__title">Noix de coquilles Saint-Jacques</h4>
+            <p class="item__description">Sur lit de purée de céleri-rave</p>
           </header>
           <div class="item__price">40€</div>
         </section>
         <section class="item">
           <header class="item__header">
-            <h4 class="item__title">Magret de canard</h4>
-            <p class="item__description">Et parmentier de pommes de terre</p>
+            <h4 class="item__title">Langoustine poêlée</h4>
+            <p class="item__description">Purée de patate douce</p>
           </header>
           <div class="item__price">35€</div>
         </section>
         <section class="item">
           <header class="item__header">
-            <h4 class="item__title">Pigeonneau d’Ille-et-Vilaine</h4>
-            <p class="item__description">Sur son lit de gnocchis aux légumes</p>
+            <h4 class="item__title">Mijoté de queue de boeuf</h4>
+            <p class="item__description">Et riz sauvage aux zestes de citron</p>
           </header>
           <div class="item__price">44€</div>
         </section>
@@ -86,22 +93,22 @@
         <h3 class="sublevelmenu__title">Desserts</h3>
         <section class="item">
           <header class="item__header">
-            <h4 class="item__title">Pétales de violettes glacés</h4>
-            <p class="item__description">Et purée de noisettes</p>
+            <h4 class="item__title">Macaron noisette et chocolat</h4>
+            <p class="item__description">Glace au caramel brun et sel de Guérande</p>
           </header>
           <div class="item__price">18€</div>
         </section>
         <section class="item">
           <header class="item__header">
-            <h4 class="item__title">Fondant au chocolat</h4>
-            <p class="item__description">Revisité</p>
+            <h4 class="item__title">Baba au rhum revisité</h4>
+            <p class="item__description">Avec son coulis de citron</p>
           </header>
           <div class="item__price">22€</div>
         </section>
         <section class="item">
           <header class="item__header">
-            <h4 class="item__title">Millefeuille croustillant</h4>
-            <p class="item__description">Myrtilles et pâte d’amande</p>
+            <h4 class="item__title">Tarte au citron meringuée</h4>
+            <p class="item__description">Déstructurée</p>
           </header>
           <div class="item__price">23€</div>
         </section>
