--- a/homepage.html
+++ b/homepage.html
@@ -63,19 +63,21 @@
       <div class="restaurant__cards">
         <h1 class="restaurants__title">Restaurants</h1>
         <div class="restaurants__card">
-          <img src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" class="restaurants__card__images">
-          <span class="restaurants__new">Nouveau</span>
-          <footer class="restaurants__infos">
-            <div class="restaurants__content">
-              <h2 class="restaurants__name">La palette du goût</h2>
-              <p class="restaurants__subtitle">Ménilmontant</p>
-            </div>
-            <label class="checkbox-heart">
-              <input type="checkbox">
-              <i class="fas fa-heart uncheck"></i>
-              <i class="fas fa-heart check"></i>
-            </label>
-          </footer>
+          <a class="restaurants__navigation" href="./la-palette-du-goût.html">
+            <img src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" class="restaurants__card__images">
+            <span class="restaurants__new">Nouveau</span>
+            <footer class="restaurants__infos">
+              <div class="restaurants__content">
+                <h2 class="restaurants__name">La palette du goût</h2>
+                <p class="restaurants__subtitle">Ménilmontant</p>
+              </div>
+              <label class="checkbox-heart">
+                <input type="checkbox">
+                <i class="fas fa-heart uncheck"></i>
+                <i class="fas fa-heart check"></i>
+              </label>
+            </footer>
+          </a>
         </div>
 
         <div class="restaurants__card">
