ajout page délice des sens + animation item__confirmation

--- a/homepage.html
+++ b/homepage.html
@@ -37,25 +37,25 @@
       <div class="operation__card">
         <p class="operation__number">1</p>
         <div class="operation__explain">
-          <i class="fas fa-mobile-alt mobile__icone"></i>
+          <i class="fas fa-mobile-alt icone"></i>
           <p class="operation__text">Choisissez un restaurant</p>
         </div>
       </div>
       <div class="operation__card">
         <p class="operation__number">2</p>
         <div class="operation__explain">
-          <i class="fas fa-list-ul list__icone"></i>
+          <i class="fas fa-list-ul operation__card__icone"></i>
           <p class="operation__text">Composez votre menu</p>
         </div>
       </div>
       <div class="operation__card">
-        <div class="operation__degustation">
+        <!-- <div class="operation__degustation"> -->
           <p class="operation__number">3</p>
           <div class="operation__explain">
-            <i class="fas fa-store store__icone"></i>
+            <i class="fas fa-store operation__card__icone"></i>
             <p class="operation__text">Dégustez au restaurant</p>
           </div>
-        </div>
+        <!-- </div> -->
       </div>
     </section>
 
@@ -121,19 +121,21 @@
         </div>
 
         <div class="restaurants__card">
-          <img src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" class="restaurants__card__images">
-          <!-- <span class="restaurants__new"></span> -->
-          <footer class="restaurants__infos">
-            <div class="restaurants__content">
-              <h2 class="restaurants__name">Le délice des sens</h2>
-              <p class="restaurants__subtitle">Folie-Méricourt</p>
-            </div>
-            <label class="checkbox-heart">
-              <input type="checkbox">
-              <i class="fas fa-heart uncheck"></i>
-              <i class="fas fa-heart check"></i>
-            </label>
-          </footer>
+          <a class="restaurants__navigation" href="./le-delice-des-sens.html">
+            <img src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" class="restaurants__card__images">
+            <!-- <span class="restaurants__new"></span> -->
+            <footer class="restaurants__infos">
+              <div class="restaurants__content">
+                <h2 class="restaurants__name">Le délice des sens</h2>
+                <p class="restaurants__subtitle">Folie-Méricourt</p>
+              </div>
+              <label class="checkbox-heart">
+                <input type="checkbox">
+                <i class="fas fa-heart uncheck"></i>
+                <i class="fas fa-heart check"></i>
+              </label>
+            </footer>
+          </a>
         </div>
       </div>
     </section>
