--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Restaurant "La Note Enchantée"</title>
+  <title>Restaurant "Le délice des sens"</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/7d17636476.js" crossorigin="anonymous"></script>
 </head>
@@ -19,11 +19,11 @@
     </div>
   </header>
 
-  <img src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="restaurants-details-images__enchantee">
+  <img src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" class="restaurants-details-images">
 
-  <main class="details__enchantee">
+  <main class="details">
     <header class="details__header">
-      <h2 class="details__title">La Note Enchantée</h2>
+      <h2 class="details__title">Le délice des sens</h2>
       <label class="checkbox-heart">
         <input type="checkbox">
         <i class="fas fa-heart uncheck"></i>
@@ -36,21 +36,20 @@
         <h3 class="sublevelmenu__title">Entrées</h3>
         <section class="item">
           <header class="item__header">
-            <h4 class="item__title">Ravioles de foie gras</h4>
-            <p class="item__description">Accompagnés de leur crème à la truffe</p>
+            <h4 class="item__title">Tartare de thon</h4>
+            <p class="item__description">Assaisonné au yuzu</p>
           </header>
-          <aside class="item__price">25€</aside>
+          <div class="item__price">25€</div>
           <div class="item__confirmation">
             <div class="item__divIcon">
               <i class="item__icon fas fa-check"></i>
             </div>
           </div>
         </section>
-
         <section class="item">
           <header class="item__header">
-            <h4 class="item__title">Caviar osciètre </h4>
-            <p class="item__description">Sur blini à la farine de blé noir</p>
+            <h4 class="item__title">Bouchée de homard croustillant</h4>
+            <p class="item__description">Et sa farandole de petits légumes</p>
           </header>
           <div class="item__price">35€</div>
           <div class="item__confirmation">
@@ -58,28 +57,13 @@
               <i class="item__icon fas fa-check"></i>
             </div>
           </div>
-          <!-- <div class="validate">
-            <i class="fas fa-check-circle"></i>
-          </div> -->
         </section>
         <section class="item">
           <header class="item__header">
-            <h4 class="item__title">Homard et espuma de potiron</h4>
-            <p class="item__description">Mariné aux zestes d'orange</p>
+            <h4 class="item__title">Velouté de cèpes</h4>
+            <p class="item__description">Aux truffes</p>
           </header>
           <div class="item__price">20€</div>
-          <div class="item__confirmation">
-            <div class="item__divIcon">
-              <i class="item__icon fas fa-check"></i>
-            </div>
-          </div>
-        </section>
-        <section class="item">
-          <header class="item__header">
-            <h4 class="item__title">Foie gras de canard cuit entier</h4>
-            <p class="item__description">Confiture de figue et pain toasté</p>
-          </header>
-          <div class="item__price">35€</div>
           <div class="item__confirmation">
             <div class="item__divIcon">
               <i class="item__icon fas fa-check"></i>
@@ -92,8 +76,8 @@
         <h3 class="sublevelmenu__title">Plats</h3>
         <section class="item">
           <header class="item__header">
-            <h4 class="item__title">Noix de coquilles Saint-Jacques</h4>
-            <p class="item__description">Sur lit de purée de céleri-rave</p>
+            <h4 class="item__title">Poulet rôti aux herbes de Provence</h4>
+            <p class="item__description">Et sa crème de truffe</p>
           </header>
           <div class="item__price">40€</div>
           <div class="item__confirmation">
@@ -104,8 +88,8 @@
         </section>
         <section class="item">
           <header class="item__header">
-            <h4 class="item__title">Langoustine poêlée</h4>
-            <p class="item__description">Purée de patate douce</p>
+            <h4 class="item__title">Langouste rôtie</h4>
+            <p class="item__description">Et ses légumes de saison</p>
           </header>
           <div class="item__price">35€</div>
           <div class="item__confirmation">
@@ -116,8 +100,8 @@
         </section>
         <section class="item">
           <header class="item__header">
-            <h4 class="item__title">Mijoté de queue de boeuf</h4>
-            <p class="item__description">Et riz sauvage aux zestes de citron</p>
+            <h4 class="item__title">Côte de boeuf Angus</h4>
+            <p class="item__description">Et sa purée de panais</p>
           </header>
           <div class="item__price">44€</div>
           <div class="item__confirmation">
@@ -132,8 +116,8 @@
         <h3 class="sublevelmenu__title">Desserts</h3>
         <section class="item">
           <header class="item__header">
-            <h4 class="item__title">Macaron noisette et chocolat</h4>
-            <p class="item__description">Glace au caramel brun et sel de Guérande</p>
+            <h4 class="item__title">Farandole de desserts</h4>
+            <p class="item__description">Du chef</p>
           </header>
           <div class="item__price">18€</div>
           <div class="item__confirmation">
@@ -144,8 +128,8 @@
         </section>
         <section class="item">
           <header class="item__header">
-            <h4 class="item__title">Baba au rhum revisité</h4>
-            <p class="item__description">Avec son coulis de citron</p>
+            <h4 class="item__title">Crème brulée</h4>
+            <p class="item__description">Revisitée</p>
           </header>
           <div class="item__price">22€</div>
           <div class="item__confirmation">
@@ -156,8 +140,8 @@
         </section>
         <section class="item">
           <header class="item__header">
-            <h4 class="item__title">Tarte au citron meringuée</h4>
-            <p class="item__description">Déstructurée</p>
+            <h4 class="item__title">Tiramisu</h4>
+            <p class="item__description">À la noisette</p>
           </header>
           <div class="item__price">23€</div>
           <div class="item__confirmation">
