--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -40,6 +40,11 @@
             <p class="item__description">Aux zests d'orange</p>
           </header>
           <div class="item__price">25€</div>
+          <div class="item__confirmation">
+            <div class="item__divIcon">
+              <i class="item__icon fas fa-check"></i>
+            </div>
+          </div>
         </section>
         <section class="item">
           <header class="item__header">
@@ -47,6 +52,11 @@
             <p class="item__description">Carotte, panais, topinambour</p>
           </header>
           <div class="item__price">35€</div>
+          <div class="item__confirmation">
+            <div class="item__divIcon">
+              <i class="item__icon fas fa-check"></i>
+            </div>
+          </div>
         </section>
         <section class="item">
           <header class="item__header">
@@ -54,6 +64,11 @@
             <p class="item__description">Revisitée</p>
           </header>
           <div class="item__price">20€</div>
+          <div class="item__confirmation">
+            <div class="item__divIcon">
+              <i class="item__icon fas fa-check"></i>
+            </div>
+          </div>
         </section>
       </section>
 
@@ -65,6 +80,11 @@
             <p class="item__description">Accompagnées d'une purée de panais</p>
           </header>
           <div class="item__price">40€</div>
+          <div class="item__confirmation">
+            <div class="item__divIcon">
+              <i class="item__icon fas fa-check"></i>
+            </div>
+          </div>
         </section>
         <section class="item">
           <header class="item__header">
@@ -72,6 +92,11 @@
             <p class="item__description">Et parmentier de pommes de terre</p>
           </header>
           <div class="item__price">35€</div>
+          <div class="item__confirmation">
+            <div class="item__divIcon">
+              <i class="item__icon fas fa-check"></i>
+            </div>
+          </div>
         </section>
         <section class="item">
           <header class="item__header">
@@ -79,6 +104,11 @@
             <p class="item__description">Sur son lit de gnocchis aux légumes</p>
           </header>
           <div class="item__price">44€</div>
+          <div class="item__confirmation">
+            <div class="item__divIcon">
+              <i class="item__icon fas fa-check"></i>
+            </div>
+          </div>
         </section>
       </section>
 
@@ -90,6 +120,11 @@
             <p class="item__description">Et purée de noisettes</p>
           </header>
           <div class="item__price">18€</div>
+          <div class="item__confirmation">
+            <div class="item__divIcon">
+              <i class="item__icon fas fa-check"></i>
+            </div>
+          </div>
         </section>
         <section class="item">
           <header class="item__header">
@@ -97,6 +132,11 @@
             <p class="item__description">Revisité</p>
           </header>
           <div class="item__price">22€</div>
+          <div class="item__confirmation">
+            <div class="item__divIcon">
+              <i class="item__icon fas fa-check"></i>
+            </div>
+          </div>
         </section>
         <section class="item">
           <header class="item__header">
@@ -104,6 +144,11 @@
             <p class="item__description">Myrtilles et pâte d’amande</p>
           </header>
           <div class="item__price">23€</div>
+          <div class="item__confirmation">
+            <div class="item__divIcon">
+              <i class="item__icon fas fa-check"></i>
+            </div>
+          </div>
         </section>
       </section>
 
