--- a/la-palette-du-goût.html
+++ b/la-palette-du-goût.html
@@ -40,6 +40,11 @@
             <p class="item__description">Au piment d'Espelette </p>
           </header>
           <div class="item__price">25€</div>
+          <div class="item__confirmation">
+            <div class="item__divIcon">
+              <i class="item__icon fas fa-check"></i>
+            </div>
+          </div>
         </section>
         <section class="item">
           <header class="item__header">
@@ -47,6 +52,11 @@
             <p class="item__description">Et ses copeaux de truffe noire</p>
           </header>
           <div class="item__price">35€</div>
+          <div class="item__confirmation">
+            <div class="item__divIcon">
+              <i class="item__icon fas fa-check"></i>
+            </div>
+          </div>
         </section>
         <section class="item">
           <header class="item__header">
@@ -54,6 +64,11 @@
             <p class="item__description">Assaisonné à la truffe sur lit de caviar</p>
           </header>
           <div class="item__price">20€</div>
+          <div class="item__confirmation">
+            <div class="item__divIcon">
+              <i class="item__icon fas fa-check"></i>
+            </div>
+          </div>
         </section>
       </section>
 
@@ -65,6 +80,11 @@
             <p class="item__description">Accompagné de sa ribambelle de légumes</p>
           </header>
           <div class="item__price">40€</div>
+          <div class="item__confirmation">
+            <div class="item__divIcon">
+              <i class="item__icon fas fa-check"></i>
+            </div>
+          </div>
         </section>
         <section class="item">
           <header class="item__header">
@@ -72,6 +92,11 @@
             <p class="item__description">À la truffe noire sur sa purée de panais</p>
           </header>
           <div class="item__price">35€</div>
+          <div class="item__confirmation">
+            <div class="item__divIcon">
+              <i class="item__icon fas fa-check"></i>
+            </div>
+          </div>
         </section>
         <section class="item">
           <header class="item__header">
@@ -79,6 +104,11 @@
             <p class="item__description">Aux agrumes</p>
           </header>
           <div class="item__price">44€</div>
+          <div class="item__confirmation">
+            <div class="item__divIcon">
+              <i class="item__icon fas fa-check"></i>
+            </div>
+          </div>
         </section>
       </section>
 
@@ -90,6 +120,11 @@
             <p class="item__description">Revisité</p>
           </header>
           <div class="item__price">18€</div>
+          <div class="item__confirmation">
+            <div class="item__divIcon">
+              <i class="item__icon fas fa-check"></i>
+            </div>
+          </div>
         </section>
         <section class="item">
           <header class="item__header">
@@ -97,6 +132,11 @@
             <p class="item__description">Et glace à la vanille de Madagascar</p>
           </header>
           <div class="item__price">22€</div>
+          <div class="item__confirmation">
+            <div class="item__divIcon">
+              <i class="item__icon fas fa-check"></i>
+            </div>
+          </div>
         </section>
         <section class="item">
           <header class="item__header">
@@ -104,6 +144,11 @@
             <p class="item__description">Au piment d'Espelette et à la truffe noire</p>
           </header>
           <div class="item__price">23€</div>
+          <div class="item__confirmation">
+            <div class="item__divIcon">
+              <i class="item__icon fas fa-check"></i>
+            </div>
+          </div>
         </section>
       </section>
 
