--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -10,6 +10,32 @@
 </head>
 <body>
 
+  <div class="spinner-container">
+    <div class="spinner">
+      <div class="bubble bubble--1"></div>
+      <div class="bubble bubble--2"></div>
+      <div class="bubble bubble--4"></div>
+      <div class="bubble bubble--3"></div>
+      <div class="bubble bubble--5"></div>
+      <div class="bubble bubble--6"></div>
+      <div class="aliment aliment--1"></div>
+      <div class="aliment aliment--2"></div>
+      <div class="aliment aliment--3"></div>
+      <div class="stove">
+        <div class="stove--handle"></div>
+        <div class="stove--base"></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <div class='loader'>
+    <div class='circle'></div>
+    <div class='circle'></div>
+    <div class='circle'></div>
+    <div class='circle'></div>
+    <div class='circle'></div>
+  </div> -->
+
   <header>
     <div class="menu">
       <div class="header-menu">
