add animation Fade in + move the files to the right place with the right names

--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -5,36 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Restaurant "Le délice des sens"</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="all-import.css">
   <script src="https://kit.fontawesome.com/7d17636476.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
-  <div class="spinner-container">
-    <div class="spinner">
-      <div class="bubble bubble--1"></div>
-      <div class="bubble bubble--2"></div>
-      <div class="bubble bubble--4"></div>
-      <div class="bubble bubble--3"></div>
-      <div class="bubble bubble--5"></div>
-      <div class="bubble bubble--6"></div>
-      <div class="aliment aliment--1"></div>
-      <div class="aliment aliment--2"></div>
-      <div class="aliment aliment--3"></div>
-      <div class="stove">
-        <div class="stove--handle"></div>
-        <div class="stove--base"></div>
-      </div>
-    </div>
-  </div>
-
-  <!-- <div class='loader'>
-    <div class='circle'></div>
-    <div class='circle'></div>
-    <div class='circle'></div>
-    <div class='circle'></div>
-    <div class='circle'></div>
-  </div> -->
 
   <header>
     <div class="menu">
@@ -178,14 +152,14 @@
         </section>
       </section>
 
-      <section class="command">
-        <p class="command__restaurants">
-          <a class="command__button">
-            Commander
-          </a>
-        </p>
-      </section>
     </div>
+    <section class="command">
+      <p class="command__restaurants">
+        <a class="command__button">
+          Commander
+        </a>
+      </p>
+    </section>
 
     <footer class="footer">
       <span class="footer__logo">ohmyfood</span>
