--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -154,11 +154,11 @@
 
     </div>
     <section class="command">
-      <p class="command__restaurants">
+      <h2 class="command__restaurants">
         <a class="command__button">
           Commander
         </a>
-      </p>
+      </h2>
     </section>
 
     <footer class="footer">
