--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -13,7 +13,7 @@
   <header>
     <div class="menu">
       <div class="header-menu">
-        <a href="./homepage.html"><i class="fas fa-arrow-left header-menu__arrow"></i></a>
+        <a href="./index.html" target="_blank"><i class="fas fa-arrow-left header-menu__arrow"></i></a>
         <img src="images/logo/ohmyfood.png" alt="ohmyfood">
       </div>
     </div>
