--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="restaurants__cards">
         <div class="restaurants__card">
           <a class="restaurants__navigation" href="./la-palette-du-goût.html">
-            <img src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" class="restaurants__card__images">
+            <img src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.png" alt="" class="restaurants__card__images">
             <span class="restaurants__new">Nouveau</span>
             <footer class="restaurants__infos">
               <div class="restaurants__content">
@@ -110,7 +110,7 @@
 
         <div class="restaurants__card">
           <a class="restaurants__navigation" href="./la-note-enchantée.html">
-            <img src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="" class="restaurants__card__images">
+            <img src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.png" alt="" class="restaurants__card__images">
             <span class="restaurants__new">Nouveau</span>
             <footer class="restaurants__infos">
               <div class="restaurants__content">
@@ -127,7 +127,7 @@
 
         <div class="restaurants__card">
           <a class="restaurants__navigation" href="./a-la-francaise.html">
-            <img src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="restaurants__card__images">
+            <img src="/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.png" alt="" class="restaurants__card__images">
             <!-- <span class="restaurants__new"></span> -->
             <footer class="restaurants__infos">
               <div class="restaurants__content">
@@ -148,7 +148,7 @@
 
         <div class="restaurants__card">
           <a class="restaurants__navigation" href="./le-delice-des-sens.html">
-            <img src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" class="restaurants__card__images">
+            <img src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.png" alt="" class="restaurants__card__images">
             <!-- <span class="restaurants__new"></span> -->
             <footer class="restaurants__infos">
               <div class="restaurants__content">
