--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
       </div>
     </section>
 
+    <img src="https://github.com/laurentluc07/LucLaurent_3_24012022/blob/main/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.png" alt="">
+
     <section class="restaurants">
       <h1 class="restaurants__title">Restaurants</h1>
       <div class="restaurants__cards">
